# copData

./: README.md  pyproject.toml
copChlHandler/: logger_config.py  post_process.py
cop_source/: __init__.py  logger_config.py  post_process.py  reader.py
copchlhandler/: __init__.py  copReader.py  copRequest.py  logConfig.py  post_process.py  reader.py
post_process/: process_chl.py
requests/: request_chl.py  test.py
test_name/: __init__.py  reader.py
usage/: catalog.txt  process_chl.py  req2file.py  request_chl.py
