[tool.poetry]
name = "cop_source"
version = "0.1.0"
description = "pull data from copernicus marine service and climate data store"
authors = ["Cian Kelly <cianrkelly23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
copernicusmarine = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
