[tool.poetry]
name = "copchlhandler"
version = "0.1.0"
description = "pull data from copernicus marine service and climate data store"
authors = ["Cian Kelly <cianrkelly23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
copernicusmarine = "^1.3.5"
xarray = "^2024.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
